fixed overflow

--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ html, body {
     height: 100%;
     margin: 0; 
     font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+    overflow-x: hidden;
 }
 
 body {
